--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,19 @@
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
 /[Ll]ibrary/
+[Ll]ibrary/
 /[Tt]emp/
+[Tt]emp/
 /[Oo]bj/
+[Oo]bj/
 /[Bb]uild/
+[Bb]uild/
 /[Bb]uilds/
+[Bb]uilds/
 /[Ll]ogs/
+[Ll]ogs/
 /[Mm]emoryCaptures/
+[Mm]emoryCaptures/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
